@@ -149,6 +149,7 @@ INSERT INTO command (access, name, description, cmdgroup) VALUES
 (1,		'auth', 'Get the authorization required to use a command', 'commands'),
 (1,		'autopromotion', 'Get the AP info for an account', 'accounts'),
 (35,	'ban', NULL, 'moderation'),
+(35,	'clearqueue', NULL, 'administration'),
 (34,	'createaccount', NULL, 'accounts'),
 (36,	'disconnect', NULL, 'administration'),
 (35,	'home', NULL, 'administration'),
@@ -191,9 +192,12 @@ INSERT INTO command_alias (alias, name) VALUES
 ('help', 'access'),
 ('ap', 'autopromotion'),
 ('apinfo', 'autopromotion'),
+('shutup', 'clearqueue'),
+('cq', 'clearqueue'),
 ('ca', 'createaccount'),
 ('ver', 'info'),
 ('version', 'info'),
+('rc', 'reconnect'),
 ('ra', 'renameaccount'),
 ('sa', 'setaccount'),
 ('sr', 'setrecruiter'),
